<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/player1Layout"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/pl1_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pl1"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pl1_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pl1_goal"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pl1_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pl1_score"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pl1_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_minus" />

                <Button
                    android:id="@+id/pl1_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_plus" />
            </LinearLayout>

            <TextView
                android:id="@+id/pl1_rest_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_time"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/player2Layout"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/pl2_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pl2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pl2_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pl2_goal"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pl2_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pl2_score"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pl2_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_minus" />

                <Button
                    android:id="@+id/pl2_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_plus" />
            </LinearLayout>

            <TextView
                android:id="@+id/pl2_rest_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_time"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>